Fix horizontal scroll issue happening on desktop

--- a/css/airspace.css
+++ b/css/airspace.css
@@ -196,7 +196,7 @@ a:active {
   fill:#ffffff;
 }
 .overlay-stars.stars {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   position: absolute;
   z-index: 1;
